--- a/index.html
+++ b/index.html
@@ -4,9 +4,47 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome to My GitHub Pages</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            background-color: #121212;
+            color: white;
+            margin: 0;
+            padding: 0;
+        }
+        h1 {
+            color: #00ffcc;
+            margin-top: 50px;
+        }
+        p {
+            font-size: 18px;
+        }
+        .container {
+            margin-top: 20px;
+            padding: 20px;
+        }
+        .button {
+            display: inline-block;
+            margin-top: 20px;
+            padding: 10px 20px;
+            background-color: #00ffcc;
+            color: #121212;
+            text-decoration: none;
+            font-weight: bold;
+            border-radius: 5px;
+            transition: background 0.3s;
+        }
+        .button:hover {
+            background-color: #00cc99;
+        }
+    </style>
 </head>
 <body>
-    <h1>Hello, world!</h1>
-    <p>This is my first GitHub Pages website.</p>
+    <div class="container">
+        <h1>Welcome to My Website</h1>
+        <p>This is my first GitHub Pages site, and I'm learning how to edit it!</p>
+        <a href="https://github.com/FAeN399" class="button">Visit My GitHub</a>
+    </div>
 </body>
 </html>
