--- a/index.html
+++ b/index.html
@@ -1,50 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to My GitHub Pages</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            background-color: #121212;
-            color: white;
-            margin: 0;
-            padding: 0;
-        }
-        h1 {
-            color: #00ffcc;
-            margin-top: 50px;
-        }
-        p {
-            font-size: 18px;
-        }
-        .container {
-            margin-top: 20px;
-            padding: 20px;
-        }
-        .button {
-            display: inline-block;
-            margin-top: 20px;
-            padding: 10px 20px;
-            background-color: #00ffcc;
-            color: #121212;
-            text-decoration: none;
-            font-weight: bold;
-            border-radius: 5px;
-            transition: background 0.3s;
-        }
-        .button:hover {
-            background-color: #00cc99;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Fashadow</title>
+  <style>
+    /* Reset some default margins and ensure full-height */
+    body, html {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      background-color: #222;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+    
+    /* The hexagon container */
+    .hexagon {
+      position: relative;
+      width: 400px;  /* Adjust the width to make the hexagon larger or smaller */
+      height: 400px; /* Height must be the same as width to maintain the shape proportions */
+      background: #e74c3c; /* Hexagon color */
+      clip-path: polygon(25% 0%, 75% 0%, 100% 50%, 75% 100%, 25% 100%, 0% 50%);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      color: #fff;
+      font-family: Arial, sans-serif;
+      font-size: 2rem;
+      font-weight: bold;
+      text-align: center;
+      box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+    }
+  </style>
 </head>
 <body>
-    <div class="container">
-        <h1>Welcome to My Website</h1>
-        <p>This is my first GitHub Pages site, and I'm learning how to edit it!</p>
-        <a href="https://github.com/FAeN399" class="button">Visit My GitHub</a>
-    </div>
+  <div class="hexagon">
+    Fashadow
+  </div>
 </body>
 </html>
